--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,15 @@
     <meta name="theme-color" content="#E1BC29">
     <meta name="msapplication-navbutton-color" content="#E1BC29">
     <meta name="apple-mobile-web-app-status-bar-style" content="#E1BC29">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+    <link rel="apple-touch-icon" sizes="180x180" href="<%= BASE_URL %>apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="<%= BASE_URL %>favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="<%= BASE_URL %>favicon-16x16.png">
+    <link rel="manifest" href="<%= BASE_URL %>site.webmanifest">
+    <link rel="mask-icon" href="<%= BASE_URL %>safari-pinned-tab.svg" color="#e1bc26">
+    <link rel="shortcut icon" href="<%= BASE_URL %>favicon.ico">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="msapplication-config" content="<%= BASE_URL %>browserconfig.xml">
+    <meta name="theme-color" content="#ffffff">
     <title>L U K A</title>
   </head>
   <body>
