--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,11 @@
       <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
     <div id="app"></div>
-    <!-- built files will be auto injected -->
+    <form name="contact-form" netlify netlify-honeypot="bot-field" hidden>
+      <input type="text" name="name" />
+      <input type="radio" name="email" />
+      <input type="radio" name="number" />
+      <textarea name="message"></textarea>
+    </form>
   </body>
 </html>
