--- a/public/index.html
+++ b/public/index.html
@@ -41,8 +41,8 @@
     <div id="app"></div>
     <form name="contact-form" netlify netlify-honeypot="bot-field" hidden>
       <input type="text" name="name" />
-      <input type="radio" name="email" />
-      <input type="radio" name="number" />
+      <input type="email" name="email" />
+      <input type="tel" name="number" />
       <textarea name="message"></textarea>
     </form>
   </body>
