Clean up FB/Twitter SEO

--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <title>L U K A</title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
@@ -17,22 +18,21 @@
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="msapplication-config" content="<%= BASE_URL %>browserconfig.xml">
     <meta name="theme-color" content="#ffffff">
+    <!--  TODO: Switch the URL from lu-ka-vue.netlify to lu-ka.me once you migrate domains  -->
     <meta name="author" content="Luka Salević">
     <meta property="og:title" content="L U K A">
     <meta property="og:description" content="A Freelance Fullstack Web & Software Developer skilled in Ruby, Rails, Vue, React & much more.">
     <meta property="og:locale" content="en_US">
     <meta property="og:url" content="https://lu-ka.me">
     <meta property="og:site_name" content="L U K A">
-    <meta property="og:image" content="<%= BASE_URL =%>SEO_FB.png">
+    <meta property="og:image" content="https://lu-ka-vue.netlify.com/SEO_FB.png">
     <meta name="twitter:card" content="summary">
     <meta name="twitter:site" content="@lkslvc">
     <meta name="twitter:creator" content="@lkslvc">
     <meta name="twitter:title" content="L U K A">
     <meta name="twitter:description" content="A Freelance Fullstack Web Developer that likes to play around in Rails, Vue, React and beyond">
-    <meta name="twitter:image" content="<%= BASE_URL =%>SEO_FB.png">
+    <meta name="twitter:image" content="https://lu-ka-vue.netlify.com/SEO_FB.png">
     <meta name="twitter:image:alt" content="Luka Salević">
-
-    <title>L U K A</title>
   </head>
   <body>
     <noscript>
