(Potentially) fix Facebook and twitter image meta tag issues

--- a/public/index.html
+++ b/public/index.html
@@ -25,13 +25,15 @@
     <meta property="og:locale" content="en_US">
     <meta property="og:url" content="https://lu-ka.me">
     <meta property="og:site_name" content="L U K A">
-    <meta property="og:image" content="https://lu-ka-vue.netlify.com/SEO_FB.png">
+    <meta property="og:image" content="http://lu-ka-vue.netlify.com/SEO_FB.png">
+    <meta property="og:image:secure" content="https://lu-ka-vue.netlify.com/SEO_FB.png">
     <meta name="twitter:card" content="summary">
     <meta name="twitter:site" content="@lkslvc">
     <meta name="twitter:creator" content="@lkslvc">
     <meta name="twitter:title" content="L U K A">
     <meta name="twitter:description" content="A Freelance Fullstack Web Developer that likes to play around in Rails, Vue, React and beyond">
-    <meta name="twitter:image" content="https://lu-ka-vue.netlify.com/SEO_FB.png">
+    <meta name="twitter:image" content="http://lu-ka-vue.netlify.com/SEO_FB.png">
+    <meta name="twitter:image:secure" content="https://lu-ka-vue.netlify.com/SEO_FB.png">
     <meta name="twitter:image:alt" content="Luka Salević">
   </head>
   <body>
