Hopefully (again) fix the facebook meta tags

--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
     <meta property="og:title" content="L U K A">
     <meta property="og:description" content="A Freelance Fullstack Web & Software Developer skilled in Ruby, Rails, Vue, React & much more.">
     <meta property="og:locale" content="en_US">
-    <meta property="og:url" content="https://lu-ka.me">
+    <meta property="og:url" content="https://lu-ka-vue.netlify.com">
     <meta property="og:site_name" content="L U K A">
     <meta property="og:image" content="http://lu-ka-vue.netlify.com/SEO_FB.png">
     <meta property="og:image:secure" content="https://lu-ka-vue.netlify.com/SEO_FB.png">
