--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="canonical" href="https://lu-ka.me">
+    <link rel="canonical" href="https://lu-ka-vue.netlify.com">
     <meta name="theme-color" content="#E1BC29">
     <meta name="msapplication-navbutton-color" content="#E1BC29">
     <meta name="apple-mobile-web-app-status-bar-style" content="#E1BC29">
