Replace SEO card image and add og:type entry

--- a/public/index.html
+++ b/public/index.html
@@ -20,20 +20,21 @@
     <meta name="theme-color" content="#ffffff">
     <!--  TODO: Switch the URL from lu-ka-vue.netlify to lu-ka.me once you migrate domains  -->
     <meta name="author" content="Luka Salević">
+    <meta property="og:type" content="website">
     <meta property="og:title" content="L U K A">
     <meta property="og:description" content="A Freelance Fullstack Web & Software Developer skilled in Ruby, Rails, Vue, React & much more.">
     <meta property="og:locale" content="en_US">
     <meta property="og:url" content="https://lu-ka-vue.netlify.com">
     <meta property="og:site_name" content="L U K A">
-    <meta property="og:image" content="http://lu-ka-vue.netlify.com/SEO_FB.png">
-    <meta property="og:image:secure" content="https://lu-ka-vue.netlify.com/SEO_FB.png">
+    <meta property="og:image" content="http://lu-ka-vue.netlify.com/card.png">
+    <meta property="og:image:secure" content="https://lu-ka-vue.netlify.com/card.png">
     <meta name="twitter:card" content="summary">
     <meta name="twitter:site" content="@lkslvc">
     <meta name="twitter:creator" content="@lkslvc">
     <meta name="twitter:title" content="L U K A">
-    <meta name="twitter:description" content="A Freelance Fullstack Web Developer that likes to play around in Rails, Vue, React and beyond">
-    <meta name="twitter:image" content="http://lu-ka-vue.netlify.com/SEO_FB.png">
-    <meta name="twitter:image:secure" content="https://lu-ka-vue.netlify.com/SEO_FB.png">
+    <meta name="twitter:description" content="A Freelance Fullstack Web Developer that likes to play around in Rails, Vue, React and much more.">
+    <meta name="twitter:image" content="http://lu-ka-vue.netlify.com/card.png">
+    <meta name="twitter:image:secure" content="https://lu-ka-vue.netlify.com/card.png">
     <meta name="twitter:image:alt" content="Luka Salević">
   </head>
   <body>
