Set canonical URLs to lu-ka.me instead of netlify domain

--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="canonical" href="https://lu-ka-vue.netlify.com">
+    <link rel="canonical" href="https://lu-ka.me">
     <meta name="theme-color" content="#E1BC29">
     <meta name="msapplication-navbutton-color" content="#E1BC29">
     <meta name="apple-mobile-web-app-status-bar-style" content="#E1BC29">
@@ -24,7 +24,7 @@
     <meta property="og:title" content="L U K A">
     <meta property="og:description" content="A Freelance Fullstack Web & Software Developer skilled in Ruby, Rails, Vue, React & much more.">
     <meta property="og:locale" content="en_US">
-    <meta property="og:url" content="https://lu-ka-vue.netlify.com">
+    <meta property="og:url" content="https://lu-ka.me">
     <meta property="og:site_name" content="L U K A">
     <meta property="og:image" content="http://lu-ka-vue.netlify.com/card.png">
     <meta property="og:image:secure" content="https://lu-ka-vue.netlify.com/card.png">
